Sonarqube Scan highlighted blockers:  Java 8+ compliance and other stuff.